--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.0.0",
+    "async-validator": "^3.5.1",
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.1",
